--- a/auth_module/src/main/resources/application.properties
+++ b/auth_module/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=auth_module
+
+server.port=9595
+
+#settings of postgres
+spring.datasource.url=jdbc:postgresql://localhost:5436/apartment_db
+spring.datasource.username=lucy
+spring.datasource.password=3546
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
