--- a/email_sender/src/main/resources/application.properties
+++ b/email_sender/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=email_sender
+
+#https://yandex.ru/support/mail/mail-clients/others.html
+
+#????? ????????? ??????? ? smtp.yandex.ru.
+#
+#?????? ?????????? ? SSL.
+#
+#???? ? 465. ???? ???????? ?????? ???????? ?????????? ??? ?????????? ? 587.
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=violentvioletlucy@yandex.ru
+spring.mail.password=ckqcgbjzqhaqrejm
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
