--- a/product_module/src/main/resources/application.properties
+++ b/product_module/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=product_module
+
+server.port=9696
+
+#settings of postgres
+spring.datasource.url=jdbc:postgresql://localhost:5435/apartment_db
+spring.datasource.username=lucy
+spring.datasource.password=3546
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
