--- a/architect_module/pom.xml
+++ b/architect_module/pom.xml
@@ -53,9 +53,11 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>3.3.4</version>
         </dependency>
-
-
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.4</version>
+        </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
