--- a/auth_module/pom.xml
+++ b/auth_module/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+
         <!-- База данных -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
