flyway не видит sql скриптов

--- a/architect_module/src/main/resources/application.properties
+++ b/architect_module/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.flyway.user=lucy
 spring.flyway.password=3546
 spring.flyway.url=jdbc:postgresql://localhost:5436/apartment_db
 spring.jpa.show-sql=true
+spring.flyway.locations=src/main/resources/db/migration
+
+#swagger links#http://localhost:9292/swagger-ui/index.html
