--- a/architect_module/src/main/resources/application.properties
+++ b/architect_module/src/main/resources/application.properties
@@ -17,4 +17,6 @@ spring.flyway.url=jdbc:postgresql://localhost:5436/apartment_db
 spring.jpa.show-sql=true
 spring.flyway.locations=src/main/resources/db/migration
 
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+
 #swagger links#http://localhost:9292/swagger-ui/index.html
