--- a/email_sender/src/main/resources/application.properties
+++ b/email_sender/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.mail.password=ckqcgbjzqhaqrejm
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
