--- a/product_module/pom.xml
+++ b/product_module/pom.xml
@@ -45,10 +45,11 @@
             <version>2.0.4</version>
         </dependency>
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.cloud</groupId>-->
-        <!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.1.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
