--- a/product_module/src/main/resources/application.properties
+++ b/product_module/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.username=lucy
 spring.datasource.password=3546
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
+
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+
+#swagger links#http://localhost:9696/swagger-ui/index.html
