--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=rent_apartment
 
 #swagger links#http://localhost:8585/swagger-ui/index.html
+
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
